// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput addon should render properly 1`] = `
<div>
  <div>
    <span
      class="rc-input-group-wrapper"
    >
      <span
        class="rc-input-wrapper rc-input-group"
      >
        <span
          class="rc-input-group-addon"
        >
          addonBefore
        </span>
        <input
          value=""
        />
      </span>
    </span>
    <br />
    <br />
    <span
      class="rc-input-group-wrapper"
    >
      <span
        class="rc-input-wrapper rc-input-group"
      >
        <input
          value=""
        />
        <span
          class="rc-input-group-addon"
        >
          addonAfter
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`BaseInput prefix and suffix should render properly 1`] = `
<div>
  <div>
    <span
      class="rc-input-affix-wrapper"
    >
      <span
        class="rc-input-prefix"
      >
        prefix
      </span>
      <input
        value=""
      />
    </span>
    <br />
    <br />
    <span
      class="rc-input-affix-wrapper"
    >
      <input
        value=""
      />
      <span
        class="rc-input-suffix"
      >
        suffix
      </span>
    </span>
  </div>
</div>
`;

exports[`BaseInput should correct render with prefix and addon 1`] = `
<div>
  <span
    class="rc-input-group-wrapper"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
      <span
        class="rc-input-affix-wrapper"
      >
        <span
          class="rc-input-prefix"
        >
          prefix
        </span>
        <input
          value=""
        />
      </span>
    </span>
  </span>
</div>
`;

exports[`BaseInput should render perfectly 1`] = `
<div>
  <input
    value=""
  />
</div>
`;

exports[`BaseInput should support inputStyle 1`] = `
<div>
  <input
    style="margin-left: 100px; margin-top: 200px;"
    value=""
  />
  <span
    class="rc-input-affix-wrapper"
  >
    <span
      class="rc-input-prefix"
    >
      prefix
    </span>
    <input
      style="margin-top: 200px;"
      value=""
    />
  </span>
  <span
    class="rc-input-group-wrapper"
  >
    <span
      class="rc-input-wrapper rc-input-group"
    >
      <span
        class="rc-input-group-addon"
      >
        addon
      </span>
      <input
        style="margin-top: 200px;"
        value=""
      />
    </span>
  </span>
</div>
`;
